--- a/lesson-5/styles/styles.css
+++ b/lesson-5/styles/styles.css
@@ -1,6 +1,5 @@
 @import url(./fonts.css);
 
-
 * {
   margin: 0;
   padding: 0;
@@ -8,13 +7,16 @@
   font-family: 'Roboto', sans-serif;
 }
 
-.advantages-wrapper {
-  width: 1440px;
+body {
+  color: #FFFFFF;
+}
+.container {
+  width: 1264px;
   margin: 0 auto;
-  padding: 120px 105px; 
+  padding: 120px 16px; 
 }
 
-.advantages-wrapper h2 {
+.container h2 {
   width: 306px;
   height: 47px;
   margin: 0 auto 104px;
@@ -25,7 +27,7 @@
   color: #383838;
 }
 
-.advantages-wrapper h2::after {
+.container h2::after {
   content: "";
   display: block;
   width: 100px;
@@ -45,6 +47,10 @@
   width: 25%;
 }
 
+.item:not(:last-child){
+  margin-right: 16px;
+}
+
 .item-icon {
   display: flex;
   justify-content: center;
@@ -55,7 +61,6 @@
 
 .item-title {
   margin-top: 48px; 
-  font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
@@ -64,21 +69,22 @@
 }
 
 footer {
-  width: 1440px;
-  margin: 0 auto;
-  padding: 120px 270px 120px 105px;
-  background: #10367C;
+  background-color: #10367C;
 }
 
 .footer-wrapper {
   display: flex;
-  justify-content: space-between;
 }
 
 .footer-links {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 33.333%;
+}
+
+.footer-links:not(:last-child) {
+  margin-right: 16px; 
 }
 
 .footer-links p {
